## Copyright (C) 2017 Jeremiah Orians
## This file is part of stage0.
##
## stage0 is free software: you an redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## stage0 is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added inital changelog
Added version message
Added Help message
Added support for multiple definition filesq

** Changed
Makefile is modified to follow bin standard
Renamed resulting binary to slow_lisp to prevent namespace conflicts in bin

** Fixed
makefile now does proper cleanup

** Removed
Removed C warning about unused args in prim_halt

* 0.0 - 2017-07-01
** Added
Inital important of Stage0 lisp, high level prototype

** Changed

** Fixed

** Removed